// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUpload matches snapshot: enzyme.mount 1`] = `
<FileUpload
  acceptedFormats={null}
  errorText={null}
  hintText={null}
>
  <glamorous(label)
    errorText={null}
  >
    <label
      className="css-wd82g1"
    >
      <glamorous(span)
        errorText={null}
      >
        <span
          className="css-1m1nyko"
        >
          example
        </span>
      </glamorous(span)>
      <glamorous(span)>
        <span
          className="css-3tj0gg"
        />
      </glamorous(span)>
      <glamorous(span)>
        <span
          className="css-1fve0n6"
        />
      </glamorous(span)>
      <glamorous(input)
        accept={null}
        errorText={null}
        type="file"
      >
        <input
          accept={null}
          className="css-svb7gc"
          type="file"
        />
      </glamorous(input)>
    </label>
  </glamorous(label)>
</FileUpload>
`;

exports[`FileUpload matches snapshot: enzyme.render 1`] = `
<label
  class="css-wd82g1"
>
  <span
    class="css-1m1nyko"
  >
    example
  </span>
  <span
    class="css-3tj0gg"
  />
  <span
    class="css-1fve0n6"
  />
  <input
    class="css-svb7gc"
    type="file"
  />
</label>
`;

exports[`FileUpload matches snapshot: enzyme.shallow 1`] = `
<glamorous(label)
  errorText={null}
>
  <glamorous(span)
    errorText={null}
  >
    example
  </glamorous(span)>
  <glamorous(span) />
  <glamorous(span) />
  <glamorous(input)
    accept={null}
    errorText={null}
    type="file"
  />
</glamorous(label)>
`;
